--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
     background-color: rgba(0, 0, 0, 0.7);
     display: flex;
     flex-direction: column;
+    justify-content:center;
 }
 .title{
     color: white;
