--- a/style.css
+++ b/style.css
@@ -56,3 +56,13 @@
     margin-top: 1.5vh;
     color: white;
 }
+
+footer{
+    text-align: center;
+    color:yellow;
+    font-size: 1rem;
+    font-weight: 500;
+    margin-bottom: 1rem;
+    background: black;
+}
+
